<resources>
    <string name="app_name">doMore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter Title</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="press_to_add_a_note">Press \'+\' to add a note</string>
    <string name="welcome_to_domore">Welcome to DoMore</string>
    <string name="welcome_info">Manage all your tasks in one place.\n Set, follow and Meet your targets.</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_info">By signing up, you confirm that you have accepted</string>
    <string name="our">our</string>
    <string name="terms_of_services">Terms Of Services</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="_continue">Continue</string>
    <string name="continue_with_microsoft">Continue with Microsoft</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello">Hello</string>
    <string name="today">Today</string>
    <string name="_today">today</string>
    <string name="add_favourites">Add Favourites</string>
    <string name="favourite_task">Favourite Task</string>
    <string name="task_type_header">%1$s Tasks</string>
    <string name="you_have_no_favourite_task">You have no favourite task</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="completed">Completed</string>
    <string name="general">General</string>
    <string name="due_date">Due Date</string>
    <string name="task_reminder">Task Reminder</string>
    <string name="task_description">Task Description</string>
    <string name="status">Status:</string>
    <string name="incomplete">Incomplete</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="congratulations_on_setting_up_your_first_task">Congratulations on setting \n up your first task!</string>
    <string name="close">Close</string>
    <string name="edit_task">Edit Task</string>
    <string name="select_label">Select Label</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="_label">Label</string>
    <string name="calender">Calender</string>
    <string name="notification">Notification</string>
    <string name="enter_email">Enter email</string>
    <string name="today_s_task">Today\'s Task</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="task_title">Task Title</string>
    <string name="task_title_hint">Give your task a title</string>
    <string name="what_do_you_want_to_do">What do you want to do</string>
    <string name="set_a_due_date">Set a due date</string>
    <string name="set_a_time_for_reminder">Set a time for reminder</string>
    <string name="additional_info">Additional info</string>
    <string name="priority">Priority</string>
    <string name="done">Done</string>
    <string name="reminder_time_text">%1$d:%2$d %3$s</string>
    <string name="add_task">Add task</string>
    <string name="task_number_info">You have %1$d Task to do</string>
    <string name="current_date">%1$d, %2$s, %3$d</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="school">School</string>
    <string name="others">Others</string>

    <string-array name="labels">
        <item>General</item>
        <item>Personal</item>
        <item>Work</item>
        <item>School</item>
        <item>Home</item>
        <item>Others</item>
    </string-array>

    <string-array name="priority">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>
    <string name="task_title_info"><strike> Friday Hangout </strike> </string>
    <string name="you_have_no_task_with_this_label">You have no task with this label</string>


</resources>