<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.TodayFragment">


    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/Hello_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_semibold"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_semibold"
            tools:text="Oladipupo"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="@color/primary_color"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linear_layout1"
        app:layout_constraintBottom_toBottomOf="@+id/linear_layout1"/>

    <TextView
        android:id="@+id/today_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="30sp"
        android:text="@string/today"
        android:fontFamily="@font/notosans_semibold"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout1"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/current_date"
        android:fontFamily="@font/notosans_semibold"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/today_text_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/task_num_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/task_number_info"
        android:fontFamily="@font/notosans_regular"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/_today"
        android:fontFamily="@font/notosans_regular"
        android:textSize="14sp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/task_num_info_text_view"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/custom_progress_bg"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/task_num_info_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/task_type_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <TextView
        android:id="@+id/add_task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:fontFamily="@font/notosans_medium"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/primary_color"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/add_task_label"
        app:layout_constraintEnd_toEndOf="@+id/add_task_label"
        app:layout_constraintBottom_toTopOf="@+id/add_task_label"/>


</androidx.constraintlayout.widget.ConstraintLayout>