<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.TaskDetailsFragment">

    <TextView
        android:id="@+id/add_to_favourites_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourites"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_star_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"/>


    <TextView
        android:id="@+id/task_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_outline_local_offer"
        android:drawablePadding="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/priority_number_text_view"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/priority_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_yellow_star"
        android:drawablePadding="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_to_favourites_label">

        <TextView
            android:id="@+id/due_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/due_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="04, September, 2021"
                android:textSize="14sp"
                android:fontFamily="@font/notosans_regular"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/task_reminder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_reminder"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/task_remainder_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="2:30pm"
                android:textSize="14sp"
                android:fontFamily="@font/notosans_regular"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/task_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/task_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Get drinks for guys"
                android:textSize="14sp"
                android:fontFamily="@font/notosans_regular"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="12dp"
            app:cardCornerRadius="12dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:id="@+id/notes_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Get drinks for guys"
                android:textSize="14sp"
                android:fontFamily="@font/notosans_regular"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/status_incomplete_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/incomplete"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/ic_block"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintStart_toEndOf="@+id/status_label"/>


    <TextView
        android:id="@+id/status_complete_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/complete"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/green"
        android:drawableEnd="@drawable/ic_check"
        android:drawablePadding="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintStart_toEndOf="@+id/status_label"/>

    <TextView
        android:id="@+id/delete_task_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/delete"
        android:textSize="14sp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/red"
        android:drawableEnd="@drawable/ic_delete"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/completed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textAllCaps="false"
        android:fontFamily="@font/notosans_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_label"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>