<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignUpFragment">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/curved_rectangle_bg"
        android:backgroundTint="@color/off_white"
        android:ems="10"
        android:hint="Enter email"
        android:fontFamily="@font/notosans_regular"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view" />

    <TextView
        android:id="@+id/sign_up_info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/sign_up_info"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_info_text_view">

        <TextView
            android:id="@+id/our_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/our"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/terms_of_services_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/terms_of_services"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/and_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/and"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/privacy_policy_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/privacy_policy"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />

    </LinearLayout>


    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/curved_rectangle_bg"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/notosans_semibold"
        android:padding="6dp"
        android:text="@string/_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />


    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/notosans_regular"
        android:text="-OR-"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_button" />

    <Button
        android:id="@+id/continue_with_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/curved_rectangle_bg"
        android:fontFamily="@font/notosans_semibold"
        android:padding="6dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text_view" />

    <ImageView
        android:id="@+id/google_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_apple_logo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/continue_with_google_button"
        app:layout_constraintEnd_toEndOf="@+id/continue_with_google_button"
        app:layout_constraintTop_toTopOf="@id/continue_with_google_button" />


    <Button
        android:id="@+id/continue_with_apple_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/curved_rectangle_bg"
        android:fontFamily="@font/notosans_semibold"
        android:padding="6dp"
        android:text="@string/continue_with_apple"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_with_google_button" />


    <ImageView
        android:id="@+id/apple_logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:src="@drawable/ic_apple_logo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/continue_with_apple_button"
        app:layout_constraintEnd_toEndOf="@+id/continue_with_apple_button"
        app:layout_constraintTop_toTopOf="@id/continue_with_apple_button" />

    <Button
        android:id="@+id/continue_with_microsoft_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/curved_rectangle_bg"
        android:fontFamily="@font/notosans_semibold"
        android:padding="6dp"
        android:text="@string/continue_with_microsoft"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_with_apple_button" />

    <ImageView
        android:id="@+id/microsoft_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_apple_logo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/continue_with_microsoft_button"
        app:layout_constraintEnd_toEndOf="@+id/continue_with_microsoft_button"
        app:layout_constraintTop_toTopOf="@id/continue_with_microsoft_button" />


    <TextView
        android:id="@+id/divider_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/notosans_regular"
        android:text="----------------------------------------------------------------------------------"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/already_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/log_in"
            android:textColor="@color/primary_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>